<resources>
    <string name="app_name" translatable="false">HavingOrder</string>
    <string name="havingorder_logo" translatable="false">HavingOrder logo</string>
    <string name="askEmail">What\'s your e-mail?</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="filter">Filter</string>
    <string name="signup">Signup</string>
    <string name="signupSuccess">User signed up successfully!</string>
    <string name="signinSuccess">Signed in successfully!</string>
    <string name="signinFailure">Wrong email or password!</string>
    <string name="emptyFields">One or more fields are empty!</string>
    <string name="logoDescription">App Logo</string>
    <string name="btnOrders">Orders</string>
    <string name="btnUsers">Users / Clients</string>
    <string name="btnLogout">Logout</string>
    <string name="actionbarMenu">Menu</string>
    <string name="userTypeDev">Developer</string>
    <string name="userTypeClient">Client</string>
    <string name="name">Name</string>
    <string name="phone">Phone number</string>
    <string name="userType">User type</string>
    <string name="save">Save</string>
    <string name="lblDescription">Description</string>
    <string name="descriptionPlaceholder">Service order description</string>
    <string name="lblStartDate">Start date</string>
    <string name="lblEndDate">End date</string>
    <string name="datePlaceholder">DD/MM/YYYY</string>
    <string name="lblPrice">Price</string>
    <string name="lblOrderStatus" translatable="false">Status</string>
    <string name="lblComment">Comments</string>
    <string name="btnSave">Save</string>
    <string name="addUser">Add User</string>
    <string name="editUser">Edit User</string>
    <string name="saveUserSuccess">User successfully saved!</string>
    <string name="getUserError">Error when getting user(s)</string>
    <string name="setLoggedUserError">Error when setting the logged user!</string>
    <string name="addOrder">Add Order</string>
    <string name="editOrder">Edit Order</string>
    <string name="remove">Remove</string>
    <string name="getOrderError">Error when getting order(s)</string>
    <string name="saveOrderSuccess">Order successfully saved!</string>
    <string name="saveOrderError">Error when saving order(s)</string>
    <string name="saveUserError">Error when saving user</string>
    <string name="removeUserSuccess">User successfully removed!</string>
    <string name="removeUserError">"Error when removing user: "</string>
    <string name="removeOrderError">"Error when removing order: "</string>
    <string name="removeOrderSuccess">Order successfully removed!</string>
    <string name="btnAddComment">Add Comment</string>
    <string name="btnCancel">Cancel</string>
    <string name="commentPlaceHolder">Type the comment</string>
    <string name="date">Date:</string>
    <string name="orders">Service orders</string>
    <string name="reload">Reload</string>
    <string name="orderAmount">order(s) found</string>
</resources>