<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/commentEntry"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:id="@+id/txtDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/date"
            app:layout_constraintStart_toStartOf="@+id/txtComment"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtComment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/lblComment"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnRemove"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtDate"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/btnRemove"
            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
            android:layout_width="42dp"
            android:layout_height="48dp"
            android:contentDescription="@string/remove"
            android:onClick="removeComment"
            app:icon="@drawable/ic_baseline_delete_forever_24"
            app:iconTint="@color/light_red"
            app:layout_constraintBottom_toBottomOf="@+id/txtComment"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/txtDate" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>