<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AddEditOrderCommentsActivity">

  <include
      android:id="@+id/include"
      layout="@layout/custom_action_bar"
      android:layout_width="fill_parent"
      android:layout_height="60dp" />

  <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="0dp"
      android:layout_height="0dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/include">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/commentList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/btnAdd"
        app:layout_constraintEnd_toEndOf="@+id/btnAdd"
        app:layout_constraintStart_toStartOf="@+id/btnAdd"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnSave"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginBottom="16dp"
        android:onClick="save"
        android:text="@string/btnSave"
        app:layout_constraintBottom_toTopOf="@+id/btnCancel"
        app:layout_constraintEnd_toEndOf="@+id/btnAdd"
        app:layout_constraintStart_toStartOf="@+id/btnAdd" />

    <Button
        android:id="@+id/btnCancel"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/light_red"
        android:onClick="cancel"
        android:text="@string/btnCancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btnSave"
        app:layout_constraintStart_toStartOf="@+id/btnSave" />

    <Button
        android:id="@+id/btnAdd"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="350dp"
        android:layout_height="64dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/light_green"
        android:onClick="addComment"
        android:text="@string/btnAddComment"
        app:layout_constraintBottom_toTopOf="@+id/btnSave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

  </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>