<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddEditUserActivity">

    <include
        android:id="@+id/include"
        layout="@layout/custom_action_bar"
        android:layout_width="fill_parent"
        android:layout_height="60dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include"
        app:layout_constraintVertical_bias="0.3">

        <TextView
            android:id="@+id/lblName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/txtName"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:boxStrokeColor="@color/light_green"
            app:hintTextColor="@color/light_green"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblName">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/lblEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/email"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/txtEmail"
            app:layout_constraintTop_toBottomOf="@+id/txtName" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtEmail"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:boxStrokeColor="@color/light_green"
            app:hintTextColor="@color/light_green"
            app:layout_constraintEnd_toEndOf="@+id/txtName"
            app:layout_constraintStart_toStartOf="@+id/txtName"
            app:layout_constraintTop_toBottomOf="@+id/lblEmail">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/lblPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/phone"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/txtPhone"
            app:layout_constraintTop_toBottomOf="@+id/txtEmail" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtPhone"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:boxStrokeColor="@color/light_green"
            app:hintTextColor="@color/light_green"
            app:layout_constraintEnd_toEndOf="@+id/txtEmail"
            app:layout_constraintStart_toStartOf="@+id/txtEmail"
            app:layout_constraintTop_toBottomOf="@+id/lblPhone">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone"
                android:inputType="phone" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/lblUserType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/userType"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/cmbType"
            app:layout_constraintTop_toBottomOf="@+id/txtPhone" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/cmbType"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:boxStrokeColor="@color/light_green"
            app:hintTextColor="@color/light_green"
            app:layout_constraintEnd_toEndOf="@+id/txtPhone"
            app:layout_constraintStart_toStartOf="@+id/txtPhone"
            app:layout_constraintTop_toBottomOf="@+id/lblUserType">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/userType" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button"
            style="@style/TextAppearance.MaterialComponents.Button"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginTop="16dp"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textColor="@color/foreground"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/cmbType"
            app:layout_constraintStart_toStartOf="@+id/cmbType"
            app:layout_constraintTop_toBottomOf="@+id/cmbType" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>